--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,18 +1,37 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
+  name: micro-dolar
+  description: Aplicación en Java para cálculos relacionados con el dólar utilizando Spring.
   annotations:
     backstage.io/techdocs-ref: dir:.
     github.com/project-slug: gmacastil/micro-dolar
     sonarqube.org/project-key: micro-dolar
-  description: Aplicación en Java para cálculos relacionados con el dólar utilizando
-    Spring.
-  name: micro-dolar
   tags:
-  - java
-  - spring
+    - java
+    - spring
 spec:
-  lifecycle: production
-  owner: gmacastil
-  system: dummy
   type: service
+  owner: gmacastil
+  lifecycle: production
+  system: discovery
+  providesApis:
+    - micro-dolar-api
+---
+apiVersion: backstage.io/v1alpha1
+kind: API
+metadata:
+  name: micro-dolar-api
+  description: Aplicación en Java para cálculos relacionados con el dólar utilizando Spring.
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+  tags:
+    - java
+    - spring
+spec:
+  type: openapi
+  owner: gmacastil
+  lifecycle: production
+  system: discovery
+  definition: 
+    $text: /docs/openapi.yaml
